<resources>

    <string name="hairdresser_phone_number">601 685 806</string>

    <string-array name="services">
        <item>Women\'s haircut</item>
        <item>Men\'s haircut</item>
        <item>Children\'s haircut</item>
        <item>Coloring</item>
        <item>Haircut and styling</item>
        <item>Balayage</item>
        <item>Updo</item>
        <item>Caring and regenerating treatment</item>
        <item>Undercutting fringe</item>
        <item>Ombre / Sombre</item>
        <item>Perm</item>
        <item>Curls</item>
        <item>Wedding updo</item>
    </string-array>

    <string-array name="services_prices">
        <item>10–17 €</item>
        <item>7–12 €</item>
        <item>6–11 €</item>
        <item>32–54 €</item>
        <item>12–26 €</item>
        <item>32–86 €</item>
        <item>20–32 €</item>
        <item>17–26 €</item>
        <item>3 €</item>
        <item>40–65 €</item>
        <item>22–28 €</item>
        <item>13–26 €</item>
        <item>22–43 €</item>
    </string-array>

    <string name="app_name">Hairdresser</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="email_hint">Enter an email</string>
    <string name="password_hint">Enter a password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="create_new_account_label">Don\'t have an account yet? Sign up here.</string>
    <string name="register_a_new_account_label">Register\na new account</string>
    <string name="sign_up_title">Register</string>
    <string name="already_have_an_account_label">Do you have an account already? Login here.</string>
    <string name="this_user_already_exists_toast">This user already exists</string>
    <string name="log_out">Log out</string>
    <string name="save_data">Save</string>
    <string name="confirm_your_new_password">Confirm a new password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="verify_your_email">Email - send verification →</string>
    <string name="age_label">Age</string>
    <string name="surname_label">Surname</string>
    <string name="name_label">Name</string>
    <string name="phone_label">Phone</string>
    <string name="pick_a_photo">Pick a photo to upload</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="photo_uploaded_successfully">Photo has been successfully uploaded</string>
    <string name="no_file_selected">No file selected</string>
    <string name="log_out_confirmation">You have successfully logged out</string>
    <string name="action_bar_title_edit">Edit</string>
    <string name="email_already_verified">This email is already verified</string>
    <string name="failed_to_send_verification_email">Failed to send verification email</string>
    <string name="verification_send_to">Verification email has been sent to %1$s</string>
    <string name="email_badly_formatted">The email address is badly formatted.</string>
    <string name="password_too_weak">The given password is too weak (minimum 6 characters)</string>
    <string name="password_invalid_or_not_existing">The password is invalid</string>
    <string name="filed_can_not_be_empty">Field can\'t be empty</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="account_successfully_registered">Account has been successfully registered</string>
    <string name="welcome_message">Welcome! &#128521;</string>
    <string name="user_not_found">That account doesn\'t exist</string>
    <string name="user_disabled">This account has been disabled</string>
    <string name="no_internet_connection">There is no internet connection</string>
    <string name="register">Book\nan appointment</string>
    <string name="estimated_price">Estimated price:</string>
    <string name="dialog_text_button_positive">Select</string>
    <string name="dialog_text_button_negative">Cancel</string>
    <string name="appointment_registered_successfully">You have been appointed for %1$s on %2$s at %3$s</string>
    <string name="appointment_dialog_message">Please select type of a service. In the next step you will be asked for the date of your appointment.</string>
    <string name="type_of_service_label">Type of service:</string>
    <string name="name_and_surname">%1$s %2$s</string>
    <string name="sth_went_wrong_try_again">Something went wrong. Try again.</string>
    <string name="confirm_button">Confirm</string>
    <string name="notification_appointment_date_accepted">See you on: %1$s! &#128522;</string>
    <string name="appointment_phone_call_button_text">Call to %1$s</string>
    <string name="appointment_reject_button_text">Reject</string>
    <string name="appointment_rejected_toast">Rejected!</string>
    <string name="appointment_approved_toast">Approved!</string>
    <string name="appointment_deleted_toast">%1$s has been successfully removed!</string>
    <string name="admin_activity_title">Administrator panel</string>
    <string name="button_update_profile_txt">Update\nprofile</string>
    <string name="toolbar_title_welcome_text">Welcome %1$s!</string>
    <string name="appointment_state_pending">This appointment is pending approval</string>
    <string name="appointment_state_approved">This appointment has been accepted</string>
    <string name="appointment_state_rejected">This appointment has been rejected.\nPlease make a new one for another date or hour or contact by phone: 601 685 806</string>
    <string name="user_appointment_activity_title">Appointments</string>
    <string name="button_appointments_txt">Appointments</string>
    <string name="no_appointments_textview_message">No appointments</string>
    <string name="menu_phone_call">Call</string>
    <string name="menu_appointment_cancel_txt">Cancel %1$s</string>
    <string name="section_header_pending">PENDING</string>
    <string name="section_header_approved">APPROVED</string>
    <string name="section_header_rejected">REJECTED</string>
    <string name="insufficient_registration_data_toast_warning_txt">Please complete your personal details to be able to make an appointment!</string>
    <string name="appointment_notifications_channel_id">appointments_channel_id</string>
    <string name="step_hour_title">Select available hour</string>
    <string name="stepper_last_step_cancel_button_text">CANCEL</string>
    <string name="stepper_form_last_step_next_button_text">REGISTER</string>
    <string name="step_service_title">Select a service</string>
    <string name="step_date_title">Select a date</string>
    <string name="stepper_form_button_next_text">NEXT</string>
    <string name="stepper_form_confirmation_button_text">Confirm</string>
    <string name="step_hour_available_label_text">Available</string>
    <string name="step_hour_not_available_label_text">Not available</string>
    <string name="book_appointment_date_not_available_message">This date is already booked by someone else. Please choose another day or time.</string>

</resources>
